# LABA1

./: CMakeLists.txt  doubleType.c  doubleType.h  dynamicArray.c  dynamicArray.h  intType.c  intType.h  main.c  operations.c  operations.h  types_info.h
test/: CMakeLists.txt  test.c
